# cowrywise_backend_assessment

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
admin_api/: Dockerfile  config.py  consumer.py  pytest.ini  requirements.txt
admin_api/admin_api/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
admin_api/api/: admin.py  apps.py  consumer.py  models.py  producer.py  publisher.py  serializers.py  subscriber.py  tests.py  urls.py  views.py
admin_api/api/management/commands/: startconsumer.py
admin_api/api/migrations/: 0001_initial.py
admin_api/utils/: advice.py
frontend_api/: Dockerfile  config.py  consumer.py  pytest.ini  requirements.txt
frontend_api/api/: models.py  producer.py  publisher.py  serializers.py  subscriber.py  tests.py  urls.py  views.py
frontend_api/api/management/commands/: startconsumer.py
frontend_api/api/migrations/: 0001_initial.py
frontend_api/frontend_api/: asgi.py  settings.py  urls.py  wsgi.py
frontend_api/utils/: advice.py  exceptions.py  test_utils.py
